Bug 659071 DoScrollZoom() should check if the event target is under XUL document rather than checking if it's XUL element r=smaug